--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
     "com.siccity.gltfutility": "https://github.com/siccity/gltfutility.git",
-    "com.unity.collab-proxy": "2.2.0",
-    "com.unity.feature.ar": "1.0.1",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.learn.iet-framework": "3.1.3",
+    "com.unity.ide.rider": "3.0.27",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
-    "com.unity.visualscripting": "1.8.0",
-    "com.unity.xr.management": "4.3.3",
+    "com.unity.xr.arcore": "5.0.7",
+    "com.unity.xr.arfoundation": "5.0.7",
+    "com.unity.xr.arkit": "5.0.7",
+    "com.unity.xr.arsubsystems": "5.0.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
