--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,12 +3,14 @@
     "com.siccity.gltfutility": "https://github.com/siccity/gltfutility.git",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.27",
+    "com.unity.mobile.android-logcat": "1.4.0",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.4",
-    "com.unity.xr.arcore": "5.0.7",
-    "com.unity.xr.arfoundation": "5.0.7",
-    "com.unity.xr.arkit": "5.0.7",
+    "com.unity.timeline": "1.7.6",
+    "com.unity.xr.arcore": "5.1.1",
+    "com.unity.xr.arfoundation": "5.1.1",
+    "com.unity.xr.arkit": "5.1.1",
     "com.unity.xr.arsubsystems": "5.0.2",
+    "com.unity.xr.mock-hmd": "1.3.1-preview.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
